<?xml version="1.0"?>
<package format="2">
  <name>position_transform</name>
  <version>0.0.0</version>
  <description>The position_transform package</description>

  <maintainer email="axadmin@todo.todo">axadmin</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>python-catkin-pkg</depend>
  <depend>eigen</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>robot_localization</build_depend>


  <export>
  </export>
</package>
